--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,9 @@
 $primaryColor: #1c213f;
+$accentColor: #3099e9;
 
 // Typography
 $fontPrimary: "Rubik", sans-serif;
 $titleWeight: 400;
+
+// Buttons
+$inputsPadding: 0.7rem;
