--- a/src/sass/components/signin/_signInSocials.scss
+++ b/src/sass/components/signin/_signInSocials.scss
@@ -18,10 +18,14 @@
     justify-content: center;
     align-items: center;
     margin: 0.5rem 0;
-    padding: 0.5rem 0;
     width: 100%;
+    img {
+      margin: 0 20px 0 0;
+      width: 1rem;
+    }
     i {
       margin: 0 20px 0 0;
+      width: 1rem;
     }
   }
 }
