--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,3 +8,4 @@
 @import "./components/app";
 @import "./components/signin/signInSocials";
 @import "./components/signin/signInForm";
+@import "./components/madeWithLove";
