--- a/src/sass/components/signin/_signInForm.scss
+++ b/src/sass/components/signin/_signInForm.scss
@@ -23,6 +23,10 @@
     input {
       font-family: $fontPrimary;
       @include roundedInput();
+      transition: outline 0.1s;
+    }
+    input:focus {
+      outline: 2px solid $accentColor;
     }
 
     .input-error {
@@ -40,10 +44,11 @@
 
     .input-submit {
       margin: 0.5rem 0;
-      background: $accentColor;
       color: white;
-      border: none;
+      background: $accentColor;
+      border: 1px solid $accentColor;
       padding: 0.7rem;
+      transition: all ease-in-out 0.15s;
     }
     .input-submit:hover {
       color: $accentColor;
