--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -99,6 +99,289 @@
   width: 100%;
 }
 
+.bg {
+  background: #3099e9;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.bg .bg_top_left_1 {
+  background: #2779b8;
+  position: absolute;
+  height: 15%;
+  width: 10%;
+  top: 0;
+  left: 0;
+}
+
+.bg .bg_top_left_2 {
+  background: #2779b8;
+  position: absolute;
+  height: 7.5%;
+  width: 10%;
+  top: 0;
+  left: 10%;
+}
+
+.bg .bg_top_right_row-1_item1__container {
+  position: absolute;
+  width: 7.5%;
+  height: 7.5%;
+  overflow: hidden;
+  right: 10%;
+}
+
+.bg .bg_top_right_row-1_item1__container .r1_i1__box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #2779b8;
+}
+
+.bg .bg_top_right_row-1_item1__container .r1_i1__triangle {
+  width: 100%;
+  height: 300%;
+  position: absolute;
+  background: #3099e9;
+  left: 0%;
+  top: -33%;
+  -webkit-transform: rotate(-41deg);
+          transform: rotate(-41deg);
+}
+
+.bg .bg_top_right_row-1_item2__container {
+  position: absolute;
+  width: 7.5%;
+  height: 7.5%;
+  overflow: hidden;
+  right: 20%;
+}
+
+.bg .bg_top_right_row-1_item2__container .r1_i2__box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #2779b8;
+}
+
+.bg .bg_top_right_row-1_item2__container .r1_i2__triangle {
+  width: 100%;
+  height: 300%;
+  position: absolute;
+  background: #3099e9;
+  left: 0%;
+  top: -33%;
+  -webkit-transform: rotate(-41deg);
+          transform: rotate(-41deg);
+}
+
+.bg .bg_top_right_row-1_item3__container {
+  position: absolute;
+  width: 7.5%;
+  height: 7.5%;
+  overflow: hidden;
+  right: 30%;
+}
+
+.bg .bg_top_right_row-1_item3__container .r1_i3__box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #2779b8;
+}
+
+.bg .bg_top_right_row-1_item3__container .r1_i3__triangle {
+  width: 100%;
+  height: 300%;
+  position: absolute;
+  background: #3099e9;
+  left: 0%;
+  top: -33%;
+  -webkit-transform: rotate(-41deg);
+          transform: rotate(-41deg);
+}
+
+.bg .bg_top_right_row-1_item4__container {
+  position: absolute;
+  width: 7.5%;
+  height: 7.5%;
+  overflow: hidden;
+  right: 40%;
+}
+
+.bg .bg_top_right_row-1_item4__container .r1_i4__box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #2779b8;
+}
+
+.bg .bg_top_right_row-1_item4__container .r1_i4__triangle {
+  width: 100%;
+  height: 300%;
+  position: absolute;
+  background: #3099e9;
+  left: 0%;
+  top: -33%;
+  -webkit-transform: rotate(-41deg);
+          transform: rotate(-41deg);
+}
+
+.bg .bg_top_right_row-2_item1__container {
+  position: absolute;
+  width: 7.5%;
+  height: 7.5%;
+  overflow: hidden;
+  right: 10%;
+  top: 7.5%;
+}
+
+.bg .bg_top_right_row-2_item1__container .r2_i1__box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #2779b8;
+}
+
+.bg .bg_top_right_row-2_item1__container .r2_i1__triangle {
+  width: 100%;
+  height: 300%;
+  position: absolute;
+  background: #3099e9;
+  left: 0%;
+  top: -33%;
+  -webkit-transform: rotate(-41deg);
+          transform: rotate(-41deg);
+}
+
+.bg .bg_top_right_row-2_item2__container {
+  position: absolute;
+  width: 7.5%;
+  height: 7.5%;
+  overflow: hidden;
+  right: 20%;
+  top: 7.5%;
+}
+
+.bg .bg_top_right_row-2_item2__container .r2_i2__box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #2779b8;
+}
+
+.bg .bg_top_right_row-2_item2__container .r2_i2__triangle {
+  width: 100%;
+  height: 300%;
+  position: absolute;
+  background: #3099e9;
+  left: 0%;
+  top: -33%;
+  -webkit-transform: rotate(-41deg);
+          transform: rotate(-41deg);
+}
+
+.bg .bg_top_right_row-2_item3__container {
+  position: absolute;
+  width: 7.5%;
+  height: 7.5%;
+  overflow: hidden;
+  right: 30%;
+  top: 7.5%;
+}
+
+.bg .bg_top_right_row-2_item3__container .r2_i3__box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #2779b8;
+}
+
+.bg .bg_top_right_row-2_item3__container .r2_i3__triangle {
+  width: 100%;
+  height: 300%;
+  position: absolute;
+  background: #3099e9;
+  left: 0%;
+  top: -33%;
+  -webkit-transform: rotate(-41deg);
+          transform: rotate(-41deg);
+}
+
+.bg .bg_top_right_row-2_item4__container {
+  position: absolute;
+  width: 7.5%;
+  height: 7.5%;
+  overflow: hidden;
+  right: 40%;
+  top: 7.5%;
+}
+
+.bg .bg_top_right_row-2_item4__container .r2_i4__box {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #2779b8;
+}
+
+.bg .bg_top_right_row-2_item4__container .r2_i4__triangle {
+  width: 100%;
+  height: 300%;
+  position: absolute;
+  background: #3099e9;
+  left: 0%;
+  top: -33%;
+  -webkit-transform: rotate(-41deg);
+          transform: rotate(-41deg);
+}
+
+.bg .bg_bottom-right_1 {
+  background: #2779b8;
+  height: 40%;
+  width: 10%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.bg .bg_bottom-right_2 {
+  background: #2779b8;
+  height: 32%;
+  width: 10%;
+  position: absolute;
+  bottom: 0;
+  right: 10%;
+}
+
+.bg .bg_bottom-right_3 {
+  background: #2779b8;
+  height: 24%;
+  width: 10%;
+  position: absolute;
+  bottom: 0%;
+  right: 20%;
+}
+
+.bg .bg_bottom-right_4 {
+  background: #2779b8;
+  height: 16%;
+  width: 10%;
+  position: absolute;
+  bottom: 0%;
+  right: 30%;
+}
+
+.bg .bg_bottom-right_5 {
+  background: #2779b8;
+  height: 8%;
+  width: 10%;
+  position: absolute;
+  bottom: 0%;
+  right: 40%;
+}
+
 .app {
   display: -webkit-box;
   display: -ms-flexbox;
