added hover affects for signin socials, updated form

--- a/src/sass/components/signin/_signInForm.scss
+++ b/src/sass/components/signin/_signInForm.scss
@@ -20,13 +20,17 @@
       margin: 0 0 0.25rem 0;
     }
 
-    input {
+    input,
+    textarea {
       font-family: $fontPrimary;
       @include roundedInput();
-      transition: outline 0.1s;
+      transition: all 0.1s;
     }
+    textarea:focus,
     input:focus {
       outline: 2px solid $accentColor;
+      border: none;
+      color: $accentColor;
     }
 
     .input-error {
@@ -67,9 +71,11 @@
       justify-content: space-between;
       span {
         font-family: $fontPrimary;
+        font-size: 0.8rem;
       }
       button {
         font-family: $fontPrimary;
+        font-size: 0.8rem;
         border: none;
         background: none;
         color: $accentColor;
