--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -24,6 +24,7 @@
   border-radius: 25px;
   text-decoration: none;
   background: none;
+  outline: none;
   border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
