--- a/src/sass/components/signin/_signInForm.scss
+++ b/src/sass/components/signin/_signInForm.scss
@@ -11,6 +11,12 @@
       flex-direction: column;
       margin: 0.5rem 0;
     }
+
+    @media screen and (max-width: $ss3) {
+      .input__container {
+        margin: 0.2rem;
+      }
+    }
     .requiredinput::after {
       content: "*";
       color: $accentColor;
@@ -53,6 +59,11 @@
       border: 1px solid $accentColor;
       padding: 0.7rem;
       transition: all ease-in-out 0.15s;
+    }
+    @media screen and (max-width: $ss3) {
+      .input-submit {
+        margin: 0rem;
+      }
     }
     .input-submit:hover {
       color: $accentColor;
