--- a/src/sass/components/signin/_signInSocials.scss
+++ b/src/sass/components/signin/_signInSocials.scss
@@ -34,3 +34,9 @@
     border: 1px solid rgb(0, 0, 0);
   }
 }
+
+@media screen and (max-width: $ss3) {
+  .sigin-thirdParties {
+    margin: 0;
+  }
+}
