--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,3 +9,4 @@
 @import "./components/signin/signInSocials";
 @import "./components/signin/signInForm";
 @import "./components/madeWithLove";
+@import "./index";
