--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -10,3 +10,4 @@
 @import "./components/signin/signInForm";
 @import "./components/madeWithLove";
 @import "./index";
+@import "./components/navBar";
