changed navbar to be sticky on left side

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,3 +11,6 @@
 @import "./components/madeWithLove";
 @import "./index";
 @import "./components/navBar";
+@import "./components/init";
+@import "./app";
+@import "./router";
