--- a/src/sass/components/_navBar.scss
+++ b/src/sass/components/_navBar.scss
@@ -1,16 +1,20 @@
 .nav {
-  margin: 2rem 0 2rem 0;
+  position: sticky;
+  top: 0;
+  border-right: 1px solid black;
 }
 
 .nav-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
-  margin: 0 5rem;
+  height: 100vh;
+  padding: 0 1rem;
 }
 
 .nav-start {
   @include flexCenter(row);
+  margin-top: 2rem;
 }
 
 .nav-home {
@@ -25,10 +29,11 @@
 .nav-links {
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 
 .NavLink {
-  margin: 0 1rem;
+  margin: 1.5rem 1rem;
   font-family: $fontPrimary;
   text-decoration: none;
   color: $primaryColor;
@@ -45,9 +50,10 @@
   padding: 0.2rem 1rem;
   transition: all 0.15s ease-in;
   border: 1px solid rgba(0, 0, 0, 0.2);
-
+  margin-bottom: 2rem;
   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   border-radius: 25px;
+  overflow: hidden;
 }
 .nav-end:hover {
   cursor: pointer;
