--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -716,21 +716,25 @@ body {
 }
 
 .nav {
-  margin: 2rem 0 2rem 0;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  border-right: 1px solid black;
 }
 
 .nav-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 0 5rem;
+  height: 100vh;
+  padding: 0 1rem;
 }
 
 .nav-start {
@@ -747,6 +751,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  margin-top: 2rem;
 }
 
 .nav-home {
@@ -767,10 +772,14 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .NavLink {
-  margin: 0 1rem;
+  margin: 1.5rem 1rem;
   font-family: "Rubik", sans-serif;
   text-decoration: none;
   color: #1c213f;
@@ -791,9 +800,11 @@ body {
   -webkit-transition: all 0.15s ease-in;
   transition: all 0.15s ease-in;
   border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-bottom: 2rem;
   -webkit-box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
           box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
   border-radius: 25px;
+  overflow: hidden;
 }
 
 .nav-end:hover {
@@ -818,5 +829,86 @@ body {
   margin: 0 1rem 0 0;
   height: 2rem;
   border-radius: 50%;
+}
+
+.init {
+  height: 100vh;
+}
+
+.init__container {
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.init__spinner {
+  color: #2779b8;
+  font-size: 10rem;
+  -webkit-animation: spin;
+          animation: spin;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.App {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  position: relative;
+  width: 100vw;
+}
+
+.App-Loading {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.app__container {
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
