--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,3 +14,5 @@
 @import "./components/init";
 @import "./app";
 @import "./router";
+@import "./components/home/tweetForm";
+@import "./routes/home";
