--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -889,12 +889,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
   position: relative;
   width: 100vw;
 }
@@ -908,7 +902,223 @@ body {
           align-items: center;
 }
 
-.app__container {
+.main {
+  width: 512px;
+  border-right: 1px solid black;
+}
+
+.explore {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 100vh;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+}
+
+.tweetForm__container {
+  padding: 1rem;
+  border-bottom: 1px solid black;
+}
+
+.tweetForm {
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.tweetForm-start {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.tweetForm__profileImg {
+  border-radius: 50%;
+  width: 3rem;
+}
+
+.tweetForm-end {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.textInput__container {
+  padding: 0.5rem 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.tweetForm__textInput {
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+  font-family: "Rubik", sans-serif;
+  padding: 0.7rem;
+  border-radius: 25px;
+  text-decoration: none;
+  background: none;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+}
+
+.tweetForm__textInput:focus,
+.tweetForm__textInput textarea:focus {
+  outline: 2px solid #3099e9;
+  border: none;
+  color: #1c213f;
+}
+
+.textInput__chars {
+  padding: 0 0 0 1rem;
+}
+
+.textInput__chars span {
+  font-family: "Rubik", sans-serif;
+}
+
+.image-input__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 1rem;
+}
+
+.image-input__icon {
+  font-size: 2rem;
+  color: #3099e9;
+  -webkit-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+
+.image-input__icon:hover {
+  opacity: 0.5;
+}
+
+#image-input {
+  display: none;
+}
+
+.tweetForm-attachedImage {
+  position: relative;
+  overflow: hidden;
+}
+
+.tweetForm-attachedImage__content {
+  -o-object-fit: fill;
+     object-fit: fill;
+  max-height: 250px;
+  max-width: 333px;
+}
+
+.tweetForm-attachedImage__deleteButton {
+  padding: 0.7rem;
+  border-radius: 25px;
+  text-decoration: none;
+  background: none;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  background: white;
+  padding: 0.25rem 0.5rem;
+  position: absolute;
+  top: 5%;
+  left: 5%;
+  -webkit-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+
+.tweetForm-attachedImage__deleteButton:hover {
+  opacity: 0.7;
+}
+
+.tweetForm__submitButton {
+  font-family: "Rubik", sans-serif;
+  font-size: 0.8rem;
+  padding: 0.7rem;
+  border-radius: 25px;
+  text-decoration: none;
+  background: none;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding: 0.5rem 1rem;
+  border: 1px solid #3099e9;
+  background: #3099e9;
+  color: white;
+  font-weight: 600;
+  -webkit-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+
+.tweetForm__submitButton:hover {
+  opacity: 0.5;
+}
+
+.home-title__container {
+  border-bottom: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1rem;
+}
+
+.home-title__heading {
+  color: #1c213f;
+  font-family: "Rubik", sans-serif;
+  font-size: 1.5rem;
+}
+
+.home-title__icon {
+  color: #1c213f;
+  font-size: 1.5rem;
 }
 /*# sourceMappingURL=style.css.map */
