--- a/src/sass/components/_navBar.scss
+++ b/src/sass/components/_navBar.scss
@@ -1,6 +1,6 @@
 .nav {
   position: sticky;
-  top: 0;
+  top: 0%;
   border-right: 1px solid black;
 }
 
@@ -10,6 +10,8 @@
   justify-content: space-between;
   height: 100vh;
   padding: 0 1rem;
+  position: sticky;
+  top: 0%;
 }
 
 .nav-start {
