--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -718,7 +718,7 @@ body {
 .nav {
   position: -webkit-sticky;
   position: sticky;
-  top: 0;
+  top: 0%;
   border-right: 1px solid black;
 }
 
@@ -735,6 +735,9 @@ body {
           justify-content: space-between;
   height: 100vh;
   padding: 0 1rem;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0%;
 }
 
 .nav-start {
