resolved width sign in bug

--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -905,6 +905,10 @@ body {
           align-items: center;
 }
 
+.logged-out {
+  width: 100%;
+}
+
 .main {
   width: 512px;
   border-right: 1px solid black;
