added styling for profile page options, edit name, and tweet feed.

--- a/src/sass/components/home/_tweetCard.scss
+++ b/src/sass/components/home/_tweetCard.scss
@@ -1,6 +1,7 @@
 .tweetCard {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   background: lightgray;
   border-radius: 25px;
   margin: 1rem;
