--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,3 +17,6 @@
 @import "./components/home/tweetForm";
 @import "./routes/home";
 @import "./components/home/tweetCard";
+@import "./routes/profile";
+@import "./components/profile/profileOptions";
+@import "./components/profile/profileTweets";
