--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -1137,6 +1137,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  overflow: hidden;
   background: lightgray;
   border-radius: 25px;
   margin: 1rem;
@@ -1254,5 +1255,201 @@ body {
 
 .tweetCard-attachment__img:hover {
   cursor: pointer;
+}
+
+.profile {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.profile-options {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-bottom: 1px solid black;
+  overflow: hidden;
+}
+
+.profile-options__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.profile-displayName__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.profile-displayName {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 1rem;
+}
+
+.profile-displayName h1 {
+  font-size: 1.5rem;
+  font-family: "Rubik", sans-serif;
+  color: #1c213f;
+  margin: 0rem;
+}
+
+.profile-displayName .profile-editName {
+  margin: 0.5rem;
+}
+
+.profile-displayName .profile-editName__icon {
+  font-size: 1.2rem;
+}
+
+.profile-displayName .profile-editName:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.profile-editNameModal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin: 1rem;
+}
+
+.profile-editNameModal .profile-editNameModal-title {
+  margin: 0;
+  color: #1c213f;
+  font-family: "Rubik", sans-serif;
+  font-size: 1;
+  font-weight: 400;
+  margin-bottom: 0.25rem;
+}
+
+.profile-editNameModal .profile-editNameModal-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.profile-editNameModal .profile-editNameModal-form .profile-editNameModel-form__inputContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.profile-editNameModal .profile-editNameModal-form .profile-editNameModal-form__input {
+  color: #1c213f;
+  padding: 0.7rem;
+  border-radius: 25px;
+  text-decoration: none;
+  background: none;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+}
+
+.profile-editNameModal .profile-editNameModal-form .profile-editNameModal-form__input:focus {
+  border: 2px solid #3099e9;
+}
+
+.profile-editNameModal .profile-editNameModal-form .profile-editNameModal-form__desc {
+  font-family: "Rubik", sans-serif;
+  font-size: 1rem;
+  margin: 0.25rem;
+}
+
+.profile-editNameModal .profile-editNameModal-form .profile-editNameModal-form__submit {
+  padding: 0.7rem;
+  border-radius: 25px;
+  text-decoration: none;
+  background: none;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-left: 0.5rem;
+  background: #3099e9;
+  color: white;
+}
+
+.profile-editNameModal .profile-editNameModal-form .profile-editNameModal-form__submit:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.profile-signOut {
+  padding: 0.7rem;
+  border-radius: 25px;
+  text-decoration: none;
+  background: none;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 2px solid #3099e9;
+  color: #3099e9;
+  margin: 0 1rem 0 0;
+  -webkit-transition: all 0.1s ease-in;
+  transition: all 0.1s ease-in;
+}
+
+.profile-signOut:hover {
+  cursor: pointer;
+  background: #3099e9;
+  color: white;
+}
+
+.profile-tweets__heading {
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-size: 1rem;
+  color: #1c213f;
+  margin: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
