--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -20,3 +20,4 @@
 @import "./routes/profile";
 @import "./components/profile/profileOptions";
 @import "./components/profile/profileTweets";
+@import "./routes/newUser";
