--- a/src/sass/_router.scss
+++ b/src/sass/_router.scss
@@ -11,3 +11,14 @@
   height: 100vh;
   flex-grow: 2;
 }
+@media screen and (max-width: 849px) {
+  .explore {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .main {
+    width: 100vw;
+  }
+}
