--- a/src/sass/components/_navBar.scss
+++ b/src/sass/components/_navBar.scss
@@ -49,6 +49,8 @@
 }
 
 .nav-end {
+  display: flex;
+  align-items: center;
   padding: 0.2rem 1rem;
   transition: all 0.15s ease-in;
   border: 1px solid rgba(0, 0, 0, 0.2);
