--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -799,6 +799,12 @@ body {
 }
 
 .nav-end {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 0.2rem 1rem;
   -webkit-transition: all 0.15s ease-in;
   transition: all 0.15s ease-in;
@@ -894,6 +900,7 @@ body {
           flex-direction: row;
   position: relative;
   width: 100vw;
+  overflow: hidden;
 }
 
 .App-Loading {
@@ -907,6 +914,26 @@ body {
 
 .logged-out {
   width: 100%;
+}
+
+@media screen and (max-width: 575px) {
+  .App {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .nav {
+    position: unset;
+  }
+  .nav-container {
+    position: unset;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    height: auto;
+  }
 }
 
 .main {
@@ -928,6 +955,18 @@ body {
   -webkit-box-flex: 2;
       -ms-flex-positive: 2;
           flex-grow: 2;
+}
+
+@media screen and (max-width: 849px) {
+  .explore {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .main {
+    width: 100vw;
+  }
 }
 
 .tweetForm__container {
